--- a/src/home/components/address-form/address-form.component.html
+++ b/src/home/components/address-form/address-form.component.html
@@ -22,7 +22,7 @@
     <ng-container *ngIf="form.value.paymentMethod">
         <h4 class="mt-3 mb-1">Your Delivery Address</h4>
         <!-- Form Elements -->
-        <form-input [fieldId]="'cus_addl'" [control]="form.get('cus_addl')"></form-input>
+        <form-input [fieldId]="'cus_add1'" [control]="form.get('cus_add1')"></form-input>
         <form-textarea [fieldId]="'cus_add2'" [control]="form.get('cus_add2')"></form-textarea>
         <form-input [fieldId]="'cus_city'" [control]="form.get('cus_city')"></form-input>
         <form-input [fieldId]="'cus_country'" [control]="form.get('cus_country')" [readonly]="true"></form-input>
