--- a/src/home/components/topbar/topbar.component.html
+++ b/src/home/components/topbar/topbar.component.html
@@ -17,7 +17,7 @@
       </div>
     </div>
     <div class="dropdown p-2" *ngIf="authService.isAuthenticated()">
-      <a class="link user dropbtn" title="Register"><span>{{(userService.user$ | async).name || profile}}</span></a>
+      <a class="link user dropbtn" title="Register"><span>{{(userService.user$ | async).name || 'Profile'}}</span></a>
       <div class="dropdown-content right-s" style="width: 180px">
         <a routerLink="/dashboard" *ngIf="!authService.isUser()"><i class="fa fa-bars"></i> Dashboard</a>
         <a routerLink="/" *ngIf="authService.isUser()"><i class="fa fa-user"></i> Profile</a>
