--- a/src/home/containers/cart/cart.component.html
+++ b/src/home/containers/cart/cart.component.html
@@ -87,7 +87,7 @@
                         </div>
                         <div class="d-flex">
                             <!-- <a class="btn btn-sm btn-primary" (click)="onConfirmOrder()">Order now</a> -->
-                            <a class="btn btn-sm btn-primary" routerLink="/order-detail">Order now</a>
+                            <a class="btn btn-sm btn-primary" routerLink="/order-confirm">Order now</a>
                         </div>
                     </div>
                 </div>
@@ -95,7 +95,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="container text-center py-5" *ngIf="!cart?.product_list || cart?.product_list?.length == 0">
         <h3><i class="fa fa-frown-o" aria-hidden="true"></i> Your cart is empty</h3>
