--- a/src/home/containers/order-confirm/order-confirm.component.html
+++ b/src/home/containers/order-confirm/order-confirm.component.html
@@ -4,7 +4,11 @@
             <app-address-form (create)="onCreate($event)"></app-address-form>
         </div>
     </div>
+
     <div class="container my-4" *ngIf="order">
         <app-order-details [order]="order"></app-order-details>
+        <div class="d-flex flex-row-reverse my-3" *ngIf="order.paymentStatus=='Due'">
+            <button class="btn btn-sm btn-primary">Pay now</button>
+        </div>
     </div>
 </div>
