--- a/src/home/containers/register/register.component.html
+++ b/src/home/containers/register/register.component.html
@@ -13,8 +13,8 @@
     <div class="register-title">Create an account</div>
     <div class="register-dialog">It's easy and quick to create an online account</div>
     <div class="container my-4">
-        <div class="offset-md-2 col-md-8">
-            <user-details-form (user)="onUserReg($event)"></user-details-form>
+        <div class="offset-md-3 col-md-6">
+            <user-details-form (create)="onUserReg($event)" [err]="errorMessage"></user-details-form>
         </div>
     </div>
 </div>
