--- a/src/home/components/navbar/navbar.component.html
+++ b/src/home/components/navbar/navbar.component.html
@@ -56,21 +56,9 @@
               (click)="$event.preventDefault()">{{cat.name}}</a>
           </div>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/free-delivery-products">Free Delivery</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/offers">Offers</a>
-        </li>
-        <!-- <li class="nav-item">
-          <a class="nav-link">৳100 Value</a>
-        </li> -->
-        <!-- <li class="nav-item">
-          <a class="nav-link" href="#">Frozen</a>
-        </li> -->
-        <li class="nav-item">
-          <a class="nav-link" routerLink="/new-products">New</a>
-        </li>
+        <li class="nav-item" *ngFor="let feature of features">
+          <a class="nav-link" [routerLink]="'/features/'+feature.slug">{{feature.name}}</a>
+        </li>       
 
       </ul>
 
