--- a/src/shared/components/offer-box/offer-box.component.html
+++ b/src/shared/components/offer-box/offer-box.component.html
@@ -1,10 +1,7 @@
 <div class="offer">
-  <img [alt]="offer.slug" src="assets/images/offers/{{offer.slug}}.jpg">
+  <img [alt]="feature.slug" [src]="imageUrl + feature._id">
   <div class="d-flex justify-content-between offer-content">
-    <div class="offer-dialog">{{offer.dialog}}</div>
-    <a class="btn btn-sm btn-success offer-button" [routerLink]="offer.links">{{offer.button_text}}</a>
+    <div class="offer-dialog">{{feature.name}}</div>
+    <a class="btn btn-sm btn-success offer-button" [routerLink]="'/features/'+feature?.slug">Shop Now</a>
   </div>
 </div>
-<!-- <hr>
-{{offer | json}}
-<hr> -->
