feature head updated

--- a/src/home/components/featured-offers/featured-offers.component.html
+++ b/src/home/components/featured-offers/featured-offers.component.html
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-12">
             <div class="title-line my-5">
-                <span>Special Offers</span>
+                <span>Featured Offers</span>
             </div>
         </div>
         <div class="col-6 mb-4" *ngFor="let feature of featured">
