form recommnaded image size updated

--- a/src/dashboard/products/components/product-form/product-form.component.html
+++ b/src/dashboard/products/components/product-form/product-form.component.html
@@ -62,7 +62,7 @@
     </div>
     <form-file [fieldId]="'thumb'" [form]="form" [hints]="'Preferred image size is 400x400 px'" (err)="onError($event)">
     </form-file>
-    <form-file [fieldId]="'images'" [form]="form" [maxFileCount]="4" [hints]="'Preferred image size is 1024x400 px'"
+    <form-file [fieldId]="'images'" [form]="form" [maxFileCount]="4" [hints]="'Preferred image size is 800X600 px'"
         (err)="onError($event)">
     </form-file>
 
