--- a/src/dashboard/features/components/feature-form/feature-form.component.html
+++ b/src/dashboard/features/components/feature-form/feature-form.component.html
@@ -5,12 +5,15 @@
     <p class="px-4 text-center text-danger">{{err}}</p>
 </ng-container>
 
+{{form.value | json}}
 <form [formGroup]="form" (ngSubmit)="submit()" (mouseleave)="mouseoverShifting = false" class="p-3">
     <!-- Form Elements -->
     <form-input [fieldId]="'name'" [control]="form.get('name')">
     </form-input>
-    <form-input [fieldId]="'priority'" [control]="form.get('priority')" [type]="'number'">
-    </form-input>
+    <form-select [fieldId]="'priority'" [control]="form.get('priority')" [options]="priorities">
+    </form-select>
+    <!-- <form-input [fieldId]="'priority'" [control]="form.get('priority')" [type]="'number'">
+    </form-input> -->
     <form-file [fieldId]="'images'" [form]="form" [hints]="'Preferred image size is 1024x400 px'"
         (err)="onError($event)">
     </form-file>
