--- a/src/dashboard/features/containers/index/index.component.html
+++ b/src/dashboard/features/containers/index/index.component.html
@@ -4,13 +4,50 @@
 <div class="container">
     <div class="row">
         <div class="col-md-8">
-            <app-feature-table [featurePage]="featurePage" [imageUrl]="imageUrl" [canActivate]="true" (edit)="onEdit($event)"
-                (refresh)="refreshData($event)" (active)="onActive($event)"></app-feature-table>
+            <app-feature-table [featurePage]="featurePage" [imageUrl]="imageUrl" [canActivate]="true"
+                (edit)="onEdit($event)" (refresh)="getList($event)" (active)="onActive($event)"></app-feature-table>
         </div>
         <div class="col-md-4">
             <div class=" border rounded bg-white">
                 <app-feature-form [item]="feature" [err]="errMsg" (create)="onCreate($event)"
                     (update)="onUpdate($event)" (delete)="onDelete($event)"></app-feature-form>
+            </div>
+
+            <div class="bg-light mt-3">
+                <table class="table mt-2 text-secondary table-responsive-sm table-sm bg-white">
+                    <tr>
+                        <th>Prioity</th>
+                        <th>Details</th>
+                        <th>Quantity</th>
+                    </tr>
+                    <tr>
+                        <th>0</th>
+                        <td>Navbar elements</td>
+                        <td>1-5</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Main banner</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td>EXCLUSIVE MULTIBUY</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+                        <th>3</th>
+                        <td>SPECIAL OFFER</td>
+                        <td>1</td>
+                    </tr>
+                    <tr>
+
+                    <tr>
+                        <th>4</th>
+                        <td>FEATURED OFFERS</td>
+                        <td>Unlimited</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
