--- a/src/home/components/front-special-offer/front-special-offer.component.html
+++ b/src/home/components/front-special-offer/front-special-offer.component.html
@@ -1,7 +1,7 @@
 <div class="container my-3">
     <div class="row" *ngFor="let offer of offers">
         <div class="col-12">
-            <div class="title-line my-5">
+            <div class="title-line">
                 <span>{{offer.title}}</span>
             </div>
         </div>
