--- a/src/home/components/home-hero/home-hero.component.html
+++ b/src/home/components/home-hero/home-hero.component.html
@@ -11,7 +11,7 @@
   <div class="position-relative">
     <div class="banner-full-outer">
       <picture>
-        <img class="img-fluid carousel-item-image" [src]="imageUrl + hero?._id">
+        <img class="img-fluid carousel-item-image variable-width-crop" [src]="imageUrl + hero?._id">
       </picture>
       <div class="banner-full-inner">
         <div class="content-width">
