--- a/src/home/components/topbar/topbar.component.html
+++ b/src/home/components/topbar/topbar.component.html
@@ -39,7 +39,7 @@
       <a class="link user" routerLink="/register" title="Register"><span>Register</span></a>
     </div>
 
-    <div class="p-2">
+    <!-- <div class="p-2">
       <a class="link info" href="https://www.iceland.co.uk/customer-support/contact-us" title="Contact us">
         <span>Help</span>
       </a>
@@ -48,7 +48,7 @@
       <a class="link info" href="https://www.iceland.co.uk/store-finder" title="Locate Stores">
         <span>Store finder</span>
       </a>
-    </div>
+    </div> -->
 
   </div>
 </div>
