--- a/src/home/components/feature-banner/feature-banner.component.html
+++ b/src/home/components/feature-banner/feature-banner.component.html
@@ -1,11 +1,11 @@
 <div class="container my-3">
     <div class="row">
         <div class="col-12">
-            <div class="title-line my-5">
+            <div class="title-line">
                 <span>{{headline}}</span>
             </div>
         </div>
-        <div class="col-12 mb-4">
+        <div class="col-12 p-0 px-md-3 mb-4">
             <offer-box [feature]="feature" [imageUrl]="imageUrl"></offer-box>
         </div>
     </div>
