--- a/src/home/components/home-hero/home-hero.component.scss
+++ b/src/home/components/home-hero/home-hero.component.scss
@@ -1,3 +1,6 @@
+section {
+  display: block;
+}
 .home-hero {
   min-height: 316px;
   background-color: #fff;
@@ -9,6 +12,7 @@
 
 .position-relative {
   position: relative !important;
+  min-height: 316px;
 }
 
 @media (min-width: 768px) {
@@ -30,6 +34,17 @@ picture source {
 .carousel-item-image {
   height: 100%;
   object-fit: cover;
+  min-height: 265px;
+}
+
+.variable-width-crop {
+  overflow: hidden;
+}
+
+img {
+  max-width: 100vw;
+  vertical-align: middle;
+  border-style: none;
 }
 
 .banner-full-inner,
@@ -50,6 +65,12 @@ picture source {
 #delivery-options-display {
   background-color: #fff;
   font-family: "museosans";
+}
+
+@media (max-width: 767px) {
+  #delivery-options-display {
+    display: none;
+  }
 }
 
 .delivery-icon {
