--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -6,134 +6,61 @@
         <div class="row">
           <div class="col-md-5 col-sm-12 col-xs-12">
             <div class="newsletter-form footer-box">
-              <h2 class="title14">Subscription</h2>
-              <form>
-                <input type="text" onblur="if (this.value=='') this.value = this.defaultValue"
-                  onfocus="if (this.value==this.defaultValue) this.value = ''" value="Place enter your email">
-                <input type="submit" value="Subscription">
-              </form>
+              <h2 class="title14">Payment methods</h2>
+              <div class="payment-method text-center">
+                <img src="assets/images/paymets/pay1.png" alt="">
+                <img src="assets/images/paymets/pay2.png" alt="">
+                <img src="assets/images/paymets/pay3.png" alt="">
+                <img src="assets/images/paymets/pay6.png" alt="">
+                <img src="assets/images/paymets/pay7.png" alt="">
+                <img src="assets/images/paymets/pay9.png" alt="">
+                <img src="assets/images/paymets/pay8.png" alt="">
+                <img src="assets/images/paymets/pay5.png" alt="">
+                <img src="assets/images/paymets/pay11.png" alt="">
+                <img src="assets/images/paymets/pay10.png" alt="">
+                <img src="assets/images/paymets/pay4.png" alt="">
+              </div>
+
             </div>
-            <div class="social-footer footer-box">
-              <h2 class="title14">Stay Connected</h2>
-              <div class="list-social">
-                <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
-                <a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
-                <a href="#"> <i class="fa fa-youtube-play" aria-hidden="true"></i> </a>
-                <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
-                <!-- <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a> -->
-                <!-- <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> -->
+
+          </div>
+          <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="menu-footer-box footer-box">
+              <h2 class="title14">Quick Links</h2>
+              <ul class="list-unstyled">
+                <li><a routerLink="/terms">Terms of Use</a></li>
+                <li><a routerLink="/privacy">Privacy Policy</a></li>
+                <li><a routerLink="/refund">Return and Refund</a></li>
+              </ul>
+              <div class="social-footer footer-box">
+                <h2 class="title14">Stay Connected</h2>
+                <div class="list-social">
+                  <a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a>
+                  <a href="#"> <i class="fa fa-instagram" aria-hidden="true"></i> </a>
+                  <a href="#"> <i class="fa fa-youtube-play" aria-hidden="true"></i> </a>
+                  <a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a>
+                  <!-- <a href="#"><i class="fa fa-pinterest" aria-hidden="true"></i></a> -->
+                  <!-- <a href="#"><i class="fa fa-google-plus" aria-hidden="true"></i></a> -->
+                </div>
               </div>
             </div>
           </div>
-          <div class="col-md-2 col-sm-3 col-xs-6">
-            <div class="menu-footer-box footer-box">
-              <h2 class="title14">How to Buy</h2>
-              <ul class="list-unstyled">
-                <li><a href="#">Create an Account</a></li>
-                <li><a href="#">Making Payments</a></li>
-                <li><a href="#">Delivery Options</a></li>
-                <li><a href="#">Buyer Protection</a></li>
-                <li><a href="#">New User Guide</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-2 col-sm-3 col-xs-6">
-            <div class="menu-footer-box footer-box">
-              <h2 class="title14">Customer Service</h2>
-              <ul class="list-unstyled">
-                <li><a href="#">Customer Support</a></li>
-                <li><a href="#">Affiliate Program</a></li>
-                <li><a href="#">Blog</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Contact us</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md-3 col-sm-6 col-xs-12">
+
+          <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="contact-footer-box footer-box">
               <h2 class="title14">contact us</h2>
-              <p class="formule-address">8901 Marmora Road, Glasgow, D04 89GR.</p>
-              <p class="formule-phone">+1 800 559 6580<br>+1 504 889 9898</p>
-              <p class="formule-email"><a href="mailto:email@demolink.org">email@demolink.org</a></p>
+              <p class="formule-address"> 32/1, Khan Plaza (3rd Floor), Science Lab, <br>Dhanmondi, Dhaka-1205.</p>
+              <p class="formule-phone">+88 01730785675 </p>
+              <p class="formule-email"><a href="mailto:info@wada.com.bd">info@wada.com.bd</a></p>
             </div>
           </div>
         </div>
       </div>
       <!-- End Footer List Box -->
     </div>
-    <div class="payment-method text-center">
-      <a href="#" class="wobble-vertical"><img src="assets/images/pay1.png" alt=""></a>
-      <a href="#" class="wobble-vertical"><img src="assets/images/pay2.png" alt=""></a>
-      <a href="#" class="wobble-vertical"><img src="assets/images/pay3.png" alt=""></a>
-      <a href="#" class="wobble-vertical"><img src="assets/images/pay4.png" alt=""></a>
-    </div>
+    
     <!-- End Payment -->
-    <div class="footer-tabs">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="item-tag-footer">
-              <div class="title-tag-footer"><span style="width:130px">Beaty &amp; Health:</span></div>
-              <div class="list-tag-footer">
-                <a href="#">Trimmers</a>
-                <a href="#">Deodorants </a>
-                <a href="#">Men's Perfume </a>
-                <a href="#">Hair Care</a>
-                <a href="#">Women's Perfume</a>
-                <a href="#">Face Packs</a>
-                <a href="#">Oral Care / Shavers &amp; Razors</a>
-              </div>
-            </div>
-            <div class="item-tag-footer">
-              <div class="title-tag-footer"><span style="width:130px">electronics:</span></div>
-              <div class="list-tag-footer">
-                <a href="#">LED TV </a>
-                <a href="#">Speakers </a>
-                <a href="#">Home Theatre</a>
-                <a href="#">Camera</a>
-                <a href="#">Office Electronics</a>
-                <a href="#">Gaming Consoles </a>
-                <a href="#">DVD Players </a>
-                <a href="#">Ipods </a>
-                <a href="#">Landline Phones </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-sm-6 col-xs-12">
-            <div class="item-tag-footer">
-              <div class="title-tag-footer"><span style="width:80px">sports:</span></div>
-              <div class="list-tag-footer">
-                <a href="#">Home Gym </a>
-                <a href="#">Bench Equipment </a>
-                <a href="#">Exercise Bikes</a>
-                <a href="#">Gloves &amp; Wraps</a>
-                <a href="#">Tennis</a>
-                <a href="#">Football</a>
-                <a href="#">Ab Exercisers</a>
-                <a href="#">Sports wear</a>
-                <a href="#">Treadmills</a>
-                <a href="#">Bars</a>
-                <a href="#">Dumbbells</a>
-              </div>
-            </div>
-            <div class="item-tag-footer">
-              <div class="title-tag-footer"><span style="width:80px">Fashion:</span></div>
-              <div class="list-tag-footer">
-                <a href="#">Sunglasses </a>
-                <a href="#">Sarees </a>
-                <a href="#">Bags &amp; Wallets</a>
-                <a href="#">Sleepwear</a>
-                <a href="#">Suitings &amp; Shirtings </a>
-                <a href="#">Accessories</a>
-                <a href="#">Formal Trousers</a>
-                <a href="#">Casual Trousers </a>
-                <a href="#">T-shirts</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    
     <!-- End Footer Tab -->
     <div class="footer-copyright">
       <div class="container">
@@ -142,7 +69,7 @@
             <p class="copyright">WADA © 2020-2021 wada.com.bd. All rights reserved.</p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <p class="designby">Design by: <a href="mailto:info@unololtd.com">unololtd.com</a></p>
+            <p class="designby">Design by: <a href="mailto:nazmuldipu@gmail.com">Nazmul Alam</a></p>
           </div>
         </div>
       </div>
