details page and terms page text justify updated

--- a/src/home/containers/details/details.component.html
+++ b/src/home/containers/details/details.component.html
@@ -51,7 +51,7 @@
                                 <div class="product-detail-rating" [style.width.%]="product?.rating"></div>
                             </div>
 
-                            <p class="desc">{{product?.description}}</p>
+                            <p class="desc text-justify">{{product?.description}}</p>
 
                             <div class="product-detail-price">
                                 <ins><span>৳ {{product?.price}}</span></ins>
