footer dialog updated

--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -66,10 +66,10 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <p class="copyright">WADA © 2020-2021 wada.com.bd. All rights reserved.</p>
+            <p class="copyright">Wada Bangladesh Limied  © 2020-2021 by wada.com.bd. All rights reserved. </p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
-            <p class="designby">Design by: <a href="mailto:nazmuldipu@gmail.com">Nazmul Alam</a></p>
+            <p class="designby">Design & Develop by: <a href="mailto:nazmuldipu@gmail.com">Nazmul Alam</a></p>
           </div>
         </div>
       </div>
