office address updated

--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -49,24 +49,25 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="contact-footer-box footer-box">
               <h2 class="title14">contact us</h2>
-              <p class="formule-address"> 32/1, Khan Plaza (3rd Floor), Science Lab, <br>Dhanmondi, Dhaka-1205.</p>
-              <p class="formule-phone">+88 01730785675 </p>
-              <p class="formule-email"><a href="mailto:info@wada.com.bd">info@wada.com.bd</a></p>
+              <p class="formule-address"> Suit# 13, Level# 4, Sahera Tropical Center <br> 218, Elephent Road, Dhaka-1205
+              </p>
+              <p class="formule-phone">+88 01730785675-9 </p>
+              <p class="formule-email"><a href="mailto:support@wada.com.bd">support@wada.com.bd</a></p>
             </div>
           </div>
         </div>
       </div>
       <!-- End Footer List Box -->
     </div>
-    
+
     <!-- End Payment -->
-    
+
     <!-- End Footer Tab -->
     <div class="footer-copyright">
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <p class="copyright">Wada Bangladesh Limied  © 2020-2021 by wada.com.bd. All rights reserved. </p>
+            <p class="copyright">Wada Bangladesh Limied © 2020-2021 by wada.com.bd. All rights reserved. </p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <p class="designby">Design & Develop by: <a href="mailto:nazmuldipu@gmail.com">Nazmul Alam</a></p>
