--- a/src/home/components/fotter/fotter.component.html
+++ b/src/home/components/fotter/fotter.component.html
@@ -30,7 +30,7 @@
               <ul class="list-unstyled">
                 <li><a routerLink="/terms">Terms of Use</a></li>
                 <li><a routerLink="/privacy">Privacy Policy</a></li>
-                <li><a routerLink="/refund">Return and Refund</a></li>
+                <li><a routerLink="/return">Return and Refund</a></li>
               </ul>
               <div class="social-footer footer-box">
                 <h2 class="title14">Stay Connected</h2>
@@ -49,7 +49,7 @@
           <div class="col-md-4 col-sm-6 col-xs-12">
             <div class="contact-footer-box footer-box">
               <h2 class="title14">contact us</h2>
-              <p class="formule-address"> Suit# 13, Level# 4, Sahera Tropical Center <br> 218, Elephent Road, Dhaka-1205
+              <p class="formule-address"> Suit# 13, Level# 4, Sahera Tropical Center <br> 218, Elephant Road, Dhaka-1205
               </p>
               <p class="formule-phone">+88 01730785675-9 </p>
               <p class="formule-email"><a href="mailto:support@wada.com.bd">support@wada.com.bd</a></p>
@@ -67,7 +67,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8 col-sm-8 col-xs-12">
-            <p class="copyright">Wada Bangladesh Limied © 2020-2021 by wada.com.bd. All rights reserved. </p>
+            <p class="copyright">Wada Bangladesh Limited © 2020-2021 by wada.com.bd. All rights reserved. </p>
           </div>
           <div class="col-md-4 col-sm-4 col-xs-12">
             <p class="designby">Design & Develop by: <a href="mailto:nazmuldipu@gmail.com">Nazmul Alam</a></p>
